# CS153

./: .gitignore  CLAUDE.md  README.md
.claude/: launch.json
.claude/agents/: article-hunter.md  distributor-researcher.md  email-validator.md  email-writer.md  fact-builder.md  fact-validator.md  hook-specialist.md
agents/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agents/aimerch/: __init__.py  config.py  db.py  dedup.py  llm.py  models.py
agents/aimerch/agents/: __init__.py  article_hunter.py  base.py  email_validator.py  email_writer.py  fact_builder.py  hook_specialist.py  person_profile_builder.py  photo_finder.py  photo_resolver.py  relationship_resolver.py  validator.py
agents/aimerch/api/: __init__.py  server.py
agents/aimerch/cli/: check_skills.py  main.py
agents/aimerch/pipeline/: __init__.py  agentic.py  discover.py  enrich.py  extract_citations.py  orchestrator.py  render.py  synthesize.py
agents/evals/: eval_email_writer.py
agents/prompts/: 01_research.md  02_dossier_html.md  03_email.md  04_ranking.md  METHODOLOGY.md
agents/tests/: test_api_integration.py  test_dedup.py  test_e2e_pipeline.py  test_extract_citations.py  test_json_extraction.py  test_resolver_triggers.py  test_role_coercion.py
backend/: .env.example  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
backend/server/: auth.ts  index.ts  instantly.ts  materials.ts  outreach.ts  (+5 more)
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+62 files in other folders)
