[project]
name = "aimerch-outreach"
version = "0.1.0"
description = "Personalized B2B outreach pipeline for beer/beverage distributors"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.40.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "fastapi[testclient]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: pure-function tests, no I/O",
    "integration: hits FastAPI / DB / filesystem",
    "e2e: end-to-end pipeline (LLM mocked)",
    "eval: LLM eval (real LLM call, may incur cost — opt-in)",
]

[project.scripts]
aimerch-research = "aimerch.cli.main:cli"
aimerch-check-skills = "aimerch.cli.check_skills:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aimerch"]
